# test-package

./: .gitignore  pyproject.toml
examples/: main.ipynb
src/custom_widget_test123/: config.py  widget.py
src/custom_widget_test123/static/: script.js
